--- a/app/globals.css
+++ b/app/globals.css
@@ -10,15 +10,19 @@ html.dark {
   --line-color: rgba(255, 255, 255, 0.2);
 }
 
-.borderBlack {
-  @apply border border-black/10;
+.borderBW {
+  @apply border border-black border-opacity-10 dark:border-white dark:border-opacity-10;
+}
+
+.primaryText {
+  @apply text-transparent bg-clip-text bg-gradient-to-r from-black/90 to-black/60 dark:invert;
 }
 
 ::-webkit-scrollbar {
-  width: 5px;
+  width: 4px;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: #2b2b2b;
+  background-color: #929292;
   border-radius: 10px;
 }
 ::-webkit-scrollbar-track {
