--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,10 @@ html.dark {
 }
 
 .borderBW {
-  @apply border border-black border-opacity-10 dark:border-white dark:border-opacity-10;
+  @apply border border-black border-opacity-5 dark:border-white dark:border-opacity-5;
+}
+.borderbBW {
+  @apply border-b border-b-black border-opacity-5 dark:border-b-white dark:border-opacity-5;
 }
 
 .primaryText {
