--- a/app/globals.css
+++ b/app/globals.css
@@ -2,23 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-  --line-color: #e5e7eb;
+@layer base {
+  html {
+    @apply !scroll-smooth;
+  }
 }
-
-html.dark {
-  --line-color: rgba(255, 255, 255, 0.2);
-}
-
 .borderBW {
-  @apply border border-black border-opacity-5 dark:border-white dark:border-opacity-5;
-}
-.borderbBW {
-  @apply border-b border-b-black border-opacity-5 dark:border-b-white dark:border-opacity-5;
-}
-
-.primaryText {
-  @apply text-transparent bg-clip-text bg-gradient-to-r from-black/90 to-black/60 dark:invert;
+  @apply border border-black border-opacity-10 dark:border-white dark:border-opacity-10;
 }
 
 ::-webkit-scrollbar {
@@ -30,4 +20,10 @@ html.dark {
 }
 ::-webkit-scrollbar-track {
   background-color: #17181c;
+}
+.borderBW {
+  @apply border border-black border-opacity-5 dark:border-white dark:border-opacity-5;
+}
+.borderbBW {
+  @apply border-b-black border-opacity-5 dark:border-b-white dark:border-opacity-5;
 }
